# junkcode_cpp

cmake_test/: CMakeLists.txt
std_cpp/: CMakeLists.txt
std_cpp/src/: main.cpp
test_catch2/: CMakeLists.txt
test_catch2/src/: lib.cpp  lib.hpp  main.cpp
test_counting/: CMakeLists.txt
test_counting/src/: counting.py  main.cpp
test_expected/: CMakeLists.txt
test_expected/src/: main.cpp
test_format/: CMakeLists.txt
test_format/src/: main.cpp
test_fortran/: CMakeLists.txt
test_fortran/src/: in.cpp  out.f90
test_hash/: CMakeLists.txt
test_hash/src/: main.cpp
test_hello/: CMakeLists.txt
test_hello/src/: main.cpp
test_optional/: CMakeLists.txt
test_optional/src/: main.cpp
test_pointer/: CMakeLists.txt
test_pointer/src/: main.cpp
test_program_options/: CMakeLists.txt
test_program_options/src/: main.cpp
test_set/: CMakeLists.txt
test_set/src/: main.cpp
test_spirit_01/: CMakeLists.txt
test_spirit_01/src/: main.cpp
test_string/: CMakeLists.txt
test_string/src/: main.cpp
test_system/: CMakeLists.txt
test_system/src/: main.cpp
test_triangle/: CMakeLists.txt
test_triangle/src/: main.cpp
test_types/: CMakeLists.txt
test_types/src/: main.cpp
test_variant/: CMakeLists.txt
test_variant/src/: main.cpp
test_vector/: CMakeLists.txt
test_vector/src/: main.cpp
